--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,7 +15,7 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: status.heimv.ch
   baseUrl: /heimv-monitor
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://www.heimv.ch/_astro/logo.B2CrTYpR.svg
   name: HeimV Status
   introTitle: ""
   introMessage: ""
@@ -28,12 +28,12 @@ status-website:
 # See https://upptime.js.org/docs/configuration
 
 workflowSchedule:
-  graphs: "0 0 * * *"
+  graphs: "0 8 1 * *"
   responseTime: "0 23 * * *"
   staticSite: "0 1 * * *"
   summary: "0 0 * * *"
-  updateTemplate: "0 0 * * *"
-  updates: "0 3 * * *"
+  updateTemplate: "0 0 1 * *"
+  updates: "0 3 1 * *"
   uptime: "*/15 * * * *"
 
 assignees:
